Adiciona descrição sobre mim

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <h1 id="title">Thainá Oliveira Abrantes</h1>
     <img id="photo" src="assets/thaina.jpeg" alt="Thainá Abrantes" width="200px">
+    <h4 id=“aboutme”><i>Sobre mim</i></h4>
+    <p>Olá, sou a Thainá, tenho 26 anos e atualmente estudo <b>Desenvolvimento Web na Trybe</b>. Sou Brasileira e moro em Paracatu, interior de Minas.</p>
 </body>
 </html>
