Adiciona lista de habilidades

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <img id="photo" src="assets/thaina.jpeg" alt="Thainá Abrantes" width="200px">
     <h4 id=“aboutme”><i>Sobre mim</i></h4>
     <p>Olá, sou a Thainá, tenho 26 anos e atualmente estudo <b>Desenvolvimento Web na Trybe</b>. Sou Brasileira e moro em Paracatu, interior de Minas.</p>
+    <h4 id=“skills”><i>Algumas das minhas habilidades:</i></h4>
+    <ul>
+        <li>CSS</li>
+        <li>React</li>
+        <li>Javascript</li>
+        <li>NodeJs</li>
+     </ul>
 </body>
 </html>
