Adiciona links externos e internos, negrito e itálico

--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Thainá Abrantes - Portifólio</title>
 </head>
+
 <body>
     <h1 id="title">Thainá Oliveira Abrantes</h1>
     <img id="photo" src="assets/thaina.jpeg" alt="Thainá Abrantes" width="200px">
     <h4 id=“aboutme”><i>Sobre mim</i></h4>
-    <p>Olá, sou a Thainá, tenho 26 anos e atualmente estudo <b>Desenvolvimento Web na Trybe</b>. Sou Brasileira e moro em Paracatu, interior de Minas.</p>
+    <p>Olá, sou a Thainá, tenho 26 anos e atualmente estudo <b>Desenvolvimento Web na Trybe</b>. Sou Brasileira e moro
+        em Paracatu, interior de Minas.</p>
     <h4 id=“skills”><i>Algumas das minhas habilidades:</i></h4>
     <ul>
         <li>CSS</li>
         <li>React</li>
         <li>Javascript</li>
         <li>NodeJs</li>
-     </ul>
+    </ul>
+    <a href=“#photo”>Foto do perfil</a>
+    <h4><i>Blog que gosto:</i></h4>
+    <a href=“https://www.estantediagonal.com.br/” target=“_blank”>Blog Estante Diagonal</a> <br><br>
+    <h4><i>Links para as sessões:</i></h4>
+    <a href=“#title”>Título</a><br>
+    <a href=“#aboutme”>Sobre mim</a><br>
+    <a href=“#skills”>Habilidades</a>
 </body>
+
 </html>
